CompositingInputsUpdater should do more clip parent analysis

Before this CL the CompositingInputUpdater only perform clip parent analysis
if a layer has scrolling ancestor layer. Instead, a layer will need clip parent
analysis as long as there is potentially composited clipping ancestor.

BUG=630632
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2295483003
Cr-Commit-Position: refs/heads/master@{#415440}